--- a/Project/Views/Course/List.cshtml
+++ b/Project/Views/Course/List.cshtml
@@ -5,22 +5,7 @@
     <div class="row row-cols-1 row-cols-md-3">
         @foreach (var course in Model.Courses)
         {
-            <div class="col mb-4">
-                <div class="card">
-                    <img src="@course.ImageUrl" alt="" class="card-img-top" />
-                    <div class="card-body">
-                        <h5 class="card-title">
-                            <a asp-controller ="Course" asp-action="Details" asp-route-id="@course.CourseId">@course.Name</a>
-                        </h5>
-                        <p class="card-text">
-                            @course.ShortDescription
-                        </p>
-                        <p class="card-text">
-                            @course.Price.ToString("c");
-                        </p>
-                    </div>
-                </div>
-            </div>
+            <partial name="_CourseCard" model="course"/>
         }
     </div>
 </div>
