--- a/Project/Views/_ViewImports.cshtml
+++ b/Project/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Project.ViewModels
 @using Project.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper Project.TagHelpers.*, Project
