--- a/Project/wwwroot/content/StyleSheet.css
+++ b/Project/wwwroot/content/StyleSheet.css
@@ -1,3 +1,8 @@
 ﻿body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
+
+.carousel-item {
+    transition: transform 2s ease;
+    transition: opacity 1.5s ease-out;
+}
