--- a/Project/Views/Shared/_Layout.cshtml
+++ b/Project/Views/Shared/_Layout.cshtml
@@ -33,9 +33,10 @@
                     <li class="nav-item">
                         <a class="nav-link" asp-controller="Contact" asp-action="Index">Contact</a>
                     </li>
-                    
+                    <partial name="_LoginPartial" />
                 </ul>
             </div>
+            @RenderSection("Scripts", false)
         </nav>
     </div>
     @RenderBody()
