--- a/Project/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Project/Areas/Identity/Pages/Account/Login.cshtml
@@ -4,7 +4,7 @@
 @{
     ViewData["Title"] = "Log in";
 }
-<div class="container mt-4 mt-3">
+<div class="container">
     <h1>@ViewData["Title"]</h1>
     <div class="row">
         <div class="col-md-4">
