--- a/Project/Views/Shared/Components/CategoryMenu/Default.cshtml
+++ b/Project/Views/Shared/Components/CategoryMenu/Default.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Category>
     <li class="nav-item dropdown">
         <a asp-controller="Course" asp-action="Index" class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Courses
+            Courses Category
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             @foreach(var item in Model)
