--- a/Project/Views/Shared/_Layout.cshtml
+++ b/Project/Views/Shared/_Layout.cshtml
@@ -19,9 +19,6 @@
                     <li class="nav-item">
                         <a class="navbar-brand" asp-controller="Home" asp-action="Index">FreeCourses</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" asp-controller="Course" asp-action="List">Courses</a>
-                    </li>
 
                     @await Component.InvokeAsync("ShoppingCartSummary")
 
@@ -30,8 +27,16 @@
                     <li class="nav-item">
                         <a class="nav-link" asp-controller="Contact" asp-action="Index">Contact</a>
                     </li>
-                    <partial name="_LoginPartial" />
+
+                    @if (User.IsInRole("Admin"))
+                    {
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Admin">Admin Page</a>
+                    </li>
+                    }
+
                 </ul>
+                <partial name="_LoginPartial" />
             </div>
             @RenderSection("Scripts", false)
         </nav>
