--- a/Project/Views/_ViewImports.cshtml
+++ b/Project/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Project.ViewModels
 @using Project.Models
+@using Project.Areas.Identity.Pages.Account
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper Project.TagHelpers.*, Project
